--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,8 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "dist/index.cjs",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "dist/index.cjs"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "dist/index.cjs"
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist/public",
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
