--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.2.5",
     "tsx": "^4.20.5",
+    "typescript": "5.6.3",
+    "vite": "^7.3.0",
+    "esbuild": "^0.25.0",
     "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
@@ -97,11 +100,8 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
-    "esbuild": "^0.25.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "typescript": "5.6.3",
-    "vite": "^7.3.0"
+    "tailwindcss": "^3.4.17"
   },
   "overrides": {
     "drizzle-kit": {
